Add boss element with emoji and bar structure

--- a/index.html
+++ b/index.html
@@ -809,6 +809,11 @@
       boss = document.createElement("div");
       boss.className = "boss";
       boss.innerHTML = `
+  <div class="bossEmoji">🦌</div>
+  <div class="bossBar"><div class="bossFill"></div></div>
+  <div class="bossLabel"></div>
+`;
+
         <div class="bossMask">
           <img class="bossBody" src="canada-goose.webp" alt="Canada Goose Boss" />
         </div>
